--- a/Weitianshi/redPackets/pages/allCrowdHB/allCrowdHB.wxml
+++ b/Weitianshi/redPackets/pages/allCrowdHB/allCrowdHB.wxml
@@ -1,2 +1,4 @@
 <import src="/redPackets/resource/Template/Template.wxml" />
-<template is="groupBox"></template>
+<block wx:for="{{groupInfo}}" wx:key="{{index}}">
+  <template is="groupBox" data="{{item:item}}"></template>
+</block>
