--- a/Weitianshi/redPackets/pages/openedHB/openedHB.wxml
+++ b/Weitianshi/redPackets/pages/openedHB/openedHB.wxml
@@ -2,27 +2,32 @@
 <!--错误提示  -->
 <view class="error" wx:if="{{error=='1'}}">{{error_text}}</view>
 <scroll-view scroll-y style="background:#f14b50;height:1200rpx;">
-  <template is="openHB1" data="{{bg_hongbao2:bg_hongbao2}}"></template>
+  <template is="openHB1" data="{{bg_hongbao2:bg_hongbao2,personInfo:personInfo}}"></template>
   <view class="moreHB flex">
     <label style="width:96rpx;height:1rpx;background:#f7c660;margin-right:16rpx;"></label>
     更多群红包
     <label style="width:96rpx;height:1rpx;background:#f7c660;margin-left:16rpx;"></label>
   </view>
-  <template is="groupBox"></template>
-  <view class="seeMore" bindtap='seeMore'>查看更多</view>
+  <block wx:for="{{groupInfo}}" wx:key="{{index}}">
+    <template is="groupBox" data="{{item:item}}"></template>
+  </block>
+  <view class="seeMore" bindtap='seeMore' wx:if="{{groupInfo.length>=3}}">查看更多</view>
   <view class="HBrecordTitile flex">
     <label style="width:96rpx;height:1rpx;background:#f7c660;margin-right:16rpx;"></label>
     红包领取记录
     <label style="width:96rpx;height:1rpx;background:#f7c660;margin-left:16rpx;"></label>
   </view>
   <!--领取记录  -->
-  <template is="HBrecord"></template>
+  <block wx:for="{{whoGet}}" wx:key="{{index}}">
+    <template is="HBrecord" data="{{item:item}}"></template>
+  </block>
+  <view style="height:100rpx"></view>
   <view class="buttonBox flex">
     <button class='jumpFirst' bindtap='toFirst'>首页</button>
     <button class="sendHB" bindtap='sendHB'>发红包</button>
-    <!-- <button class="shareMore" bindtap='sendMoreGroup'>转发到更多群</button> -->
-    <!-- <button class="shareMore" bindtap='addPerson'>加Ta为好友</button> -->
-    <view class="shareMore waitSure">待通过</view>
-    <!-- <button class="shareMore" bindtap='sendMoreGroup'>查看Ta的投资名片</button> -->
+    <button class="shareMore" bindtap='sendMoreGroup' wx:if="{{personInfo.user_id == user_id}}">转发到更多群</button>
+    <button class="shareMore" bindtap='addPerson' wx:if="{{personInfo.is_card == 2 }}">加Ta为好友</button>
+    <view class="shareMore waitSure" wx:if="{{personInfo.is_card ==0 }}">待通过</view>
+    <button class="shareMore" bindtap='sendMoreGroup' wx:if="{{personInfo.is_card}}" wx:if="{{personInfo.is_card == 1 }}">查看Ta的投资名片</button>
   </view>
 </scroll-view>
