--- a/Weitianshi/pages/my/sharePage/sharePage.wxss
+++ b/Weitianshi/pages/my/sharePage/sharePage.wxss
@@ -1,14 +1,15 @@
 @import "/pages/my/myCard/myCard.wxss";
+
 .sharePageButton {
   width: 100%;
   height: 88rpx;
-  background:#40587a; 
+  background: #40587a;
 }
 
 .giveProject, .addNetwork, .myContacts {
-   display:flex;
-  align-items: center;/*垂直居中*/
-  justify-content: center;/*水平居中*/
+  display: flex;
+  align-items: center; /*垂直居中*/
+  justify-content: center; /*水平居中*/
   width: 33.33%;
   font-family: PingFangSC-Regular;
   font-size: 28rpx;
@@ -18,9 +19,11 @@
   line-height: 28rpx;
   text-align: center;
 }
-.giveProject{
-  background:#e6e6e6;
+
+.giveProject {
+  background: #e6e6e6;
 }
+
 .user_play_time {
   font-family: PingFangSC-Regular;
   font-size: 20rpx;
@@ -28,13 +31,16 @@
   line-height: 20rpx;
   text-align: left;
   margin-bottom: 60rpx;
-  margin-top:16rpx;
+  margin-top: 16rpx;
 }
-.addPerson{
-color:#40587a;
-background: #fff;
+
+.addPerson {
+  color: #40587a;
+  background: #fff;
 }
+
 /*顶部  */
+
 .user_identifyContent {
   position: absolute;
   right: 30rpx;
@@ -42,6 +48,53 @@ background: #fff;
   width: 124rpx;
   height: 34rpx;
 }
-#investProject .successProjcet:last-child{
+
+#investProject .successProjcet:last-child {
   margin-bottom: 0;
+}
+
+.modalBox {
+  background: rgba(0, 0, 0, 0.5);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: 999;
+}
+
+.tankuang {
+  height: 614rpx;
+  width: 562rpx;
+  margin: 252rpx 0 64rpx 114rpx;
+}
+
+.btnSure {
+  height: 108rpx;
+  width: 532rpx;
+  /* margin-left: 110rpx; */
+}
+
+.getMoney {
+  font-size: 80rpx;
+  color: #e80d27;
+  text-align: center;
+  position: absolute;
+  top: 470rpx;
+  left: 238rpx;
+}
+
+button {
+  background: none;
+}
+
+.buttonnone {
+  background: none
+}
+.getName {
+  top: 770rpx;
+  left: 252rpx;
+  position: absolute;
+  font-size: 24rpx;
+  color: #f14b50;
 }
