--- a/Weitianshi/redPackets/pages/publishedHB/publishedHB.wxml
+++ b/Weitianshi/redPackets/pages/publishedHB/publishedHB.wxml
@@ -3,6 +3,7 @@
 <view class="error" wx:if="{{error=='1'}}">{{error_text}}</view>
 <scroll-view scroll-y style="height:1200rpx;">
   <view>
+      <open-data type='groupName' open-gid='G6zcd0WFWnIXAEjI4CQAzZbAsrn4'></open-data>
     <template is="openHB" data="{{bg_hongbao2:bg_hongbao2,kaiStyle:kai,open}}"></template>
     <form report-submit='true' bindsubmit='formsubmit' wx:if="{{show}}">
       <button form-type='submit'>
@@ -16,6 +17,7 @@
     <view class="getName">
       <checkbox class="checkM" checked/> 添加xxx投资名片
     </view>
+
     <form report-submit='true' bindsubmit='makeSure'>
       <button form-type='submit' hover-class='buttonOne'>
         <image class="btnSure" src="{{queding}}"></image>
