--- a/Weitianshi/redPackets/pages/openedHB/openedHB.wxml
+++ b/Weitianshi/redPackets/pages/openedHB/openedHB.wxml
@@ -3,7 +3,7 @@
 <view class="error" wx:if="{{error=='1'}}">{{error_text}}</view>
 <scroll-view scroll-y style="background:#f14b50;height:1200rpx;">
   <template is="openHB1" data="{{bg_hongbao2:bg_hongbao2,personInfo:personInfo}}"></template>
-  <view class="moreHB flex">
+  <view class="moreHB flex" wx:if="{{groupInfo}}">
     <label style="width:96rpx;height:1rpx;background:#f7c660;margin-right:16rpx;"></label>
     更多群红包
     <label style="width:96rpx;height:1rpx;background:#f7c660;margin-left:16rpx;"></label>
@@ -23,8 +23,8 @@
   </block>
   <view style="height:100rpx"></view>
   <view class="buttonBox flex">
-    <button class='jumpFirst' bindtap='toFirst'>首页</button>
-    <button class="sendHB" bindtap='sendHB'>发红包</button>
+    <button class='jumpFirst' bindtap='toFirst' hover-class='hoverHB'>首页</button>
+    <button hover-class='hoverHB' class="sendHB" bindtap='sendHB' >发红包</button>
     <button class="shareMore" bindtap='sendMoreGroup' wx:if="{{personInfo.user_id == user_id}}">转发到更多群</button>
     <button class="shareMore" bindtap='addPerson' wx:if="{{personInfo.is_card == 2 }}">加Ta为好友</button>
     <view class="shareMore waitSure" wx:if="{{personInfo.is_card ==0 }}">待通过</view>
