--- a/Weitianshi/redPackets/pages/publishedHB/publishedHB.wxml
+++ b/Weitianshi/redPackets/pages/publishedHB/publishedHB.wxml
@@ -3,8 +3,8 @@
 <view class="error" wx:if="{{error=='1'}}">{{error_text}}</view>
 <scroll-view scroll-y style="height:1200rpx;">
   <view>
-      <open-data type='groupName' open-gid='G6zcd0WFWnIXAEjI4CQAzZbAsrn4'></open-data>
-    <template is="openHB" data="{{bg_hongbao2:bg_hongbao2,kaiStyle:kai,open}}"></template>
+    <open-data type='groupName' open-gid='G6zcd0WFWnIXAEjI4CQAzZbAsrn4'></open-data>
+    <template is="openHB" data="{{bg_hongbao2:bg_hongbao2,kaiStyle:kai,open,personInfo:personInfo}}"></template>
     <form report-submit='true' bindsubmit='formsubmit' wx:if="{{show}}">
       <button form-type='submit'>
         <image class="openZhuan" src="{{zhuanfa}}"></image>
