--- a/Weitianshi/redPackets/resource/Template/Template.wxml
+++ b/Weitianshi/redPackets/resource/Template/Template.wxml
@@ -6,7 +6,8 @@
 <template name="HBrecord">
   <view id="HBrecord" hover-class='HBrecord1'>
     <view class="HBrecord flex">
-      <image src="{{item.user.avatarUrl}}" class="HBrecordImg"></image>
+      <image src="{{item.user.avatarUrl}}" class="HBrecordImg" wx:if="{{item.user.avatarUrl}}"></image>
+      <image src="/img/img-touxiang@2x.png" class="HBrecordImg" wx:if="{{!item.user.avatarUrl}}"></image>
       <view class="recordText">
         <view class="recordText1 flex">
           <view class="recordName">{{item.user.user_real_name}}</view>
@@ -28,7 +29,13 @@
 <!--群红包  -->
 <template name="groupBox">
   <view class="flex outsideBox" id="groupHB" bindtap='redDetail' hover-class='HBrecord1' data-groupid="{{item.openGId}}">
-    <view class="groupPic"></view>
+    <view class="groupPic">
+      <block wx:for="{{item.user}}" wx:key="{{index}}" wx:for-item="{{groupImage}}">
+        <view>{{item.user[0].avatarUrl}}</view>
+        <image src="{{groupImage.avatarUrl}}" class='fourImage'></image>
+        <!-- <image src="{{group.avatarUrl}}" class='fiveImage'></image> -->
+      </block>
+    </view>
     <view class="groupInfo">
       <view class="groupName">
         <open-data type="groupName" open-gid="{{item.openGId}}"></open-data>
@@ -44,13 +51,17 @@
 <template name="openHB">
   <view id="openHB">
     <image src="{{bg_hongbao2}}" class="openHB">
-      <view class="openTitle">这里是他写的标题字数可能会有点长但他写的标题字数可能会字数</view>
-      <image src="" class="openImg"></image>
-      <image src="/img/img-rzchuangyezhe@2x.png" class="openRen"></image>
-      <view class="openName">张三丰</view>
+      <view class="openTitle">{{personInfo.packet.title}}</view>
+      <image src="{{personInfo.user.avatarUrl}}" class="openImg" wx:if="{{personInfo.user.avatarUrl}}"></image>
+      <image src="/img/img-touxiang@2x.png" class="openImg" wx:if="{{!personInfo.user.avatarUrl}}"></image>
+      <image src="/img/img-rzchuangyezhe@2x.png" class="openRen" wx:if="{{personInfo.user.group[0].group_title == '创业者'}}"></image>
+      <image class="openRen" wx:if="{{personInfo.user.group[0].group_title=='投资人'}}" src="/img/img-rztouziren@2x.png"></image>
+      <image class="openRen" wx:if="{{personInfo.user.group[0].group_title=='买方FA'}}" src="/img/img-rzfa1@2x.png"></image>
+      <image class="openRen" wx:if="{{personInfo.user.group[0].group_title=='卖方FA'}}" src="/img/img-rzfa2@2x.png"></image>
+      <view class="openName">{{personInfo.user.user_real_name}}</view>
       <view class="openCareer">
-        <label>投资经理</label>
-        <label> · 杭州投着乐杭州投着乐网络科技有限公司</label>
+        <label>{{personInfo.user.user_company_career}}</label>
+        <label> · {{personInfo.user.user_brand}}</label>
       </view>
       <form report-submit='true' bindsubmit='formsubmit'>
         <button form-type='submit'>
@@ -67,8 +78,12 @@
   <view id="openHB">
     <image src="{{bg_hongbao2}}" class="openHB">
       <view class="openTitle">{{personInfo.packet.title}}</view>
-      <image src="{{personInfo.user.avatarUrl}}" class="openImg"></image>
-      <image src="/img/img-rzchuangyezhe@2x.png" class="openRen"></image>
+      <image src="{{personInfo.user.avatarUrl}}" class="openImg" wx:if="{{personInfo.user.avatarUrl}}"></image>
+      <image src="/img/img-touxiang@2x.png" class="openImg" wx:if="{{!personInfo.user.avatarUrl}}"></image>
+      <image src="/img/img-rzchuangyezhe@2x.png" class="openRen" wx:if="{{personInfo.user.group[0].group_title == '创业者'}}"></image>
+      <image class="openRen" wx:if="{{personInfo.user.group[0].group_title=='投资人'}}" src="/img/img-rztouziren@2x.png"></image>
+      <image class="openRen" wx:if="{{personInfo.user.group[0].group_title=='买方FA'}}" src="/img/img-rzfa1@2x.png"></image>
+      <image class="openRen" wx:if="{{personInfo.user.group[0].group_title=='卖方FA'}}" src="/img/img-rzfa2@2x.png"></image>
       <view class="openName">{{personInfo.user.user_real_name}}</view>
       <view class="openCareer">
         <label>{{personInfo.user.user_company_career}}</label>
@@ -78,7 +93,11 @@
       <!-- <view class="openEnd">红包已过期失效</view>  -->
       <view class="openMoney">￥100.50</view>
       <view class="openSave">已存入微信零钱包</view>
-      <view class="opentishi1">红包池： <label>{{personInfo.packet.drawed_num}}</label>   / <label>{{personInfo.packet.number}}</label>个，<label>{{personInfo.packet.drawed_money}}</label>/<label>{{personInfo.packet.money}}</label>元
+      <view class="opentishi1">红包池：
+        <label>{{personInfo.packet.drawed_num}}</label> /
+        <label>{{personInfo.packet.number}}</label>个，
+        <label>{{personInfo.packet.drawed_money}}</label>/
+        <label>{{personInfo.packet.money}}</label>元
       </view>
     </image>
   </view>
