--- a/Weitianshi/redPackets/pages/crowdDetail/crowdDetail.wxml
+++ b/Weitianshi/redPackets/pages/crowdDetail/crowdDetail.wxml
@@ -2,8 +2,12 @@
 <!--错误提示  -->
 <view class="error" wx:if="{{error=='1'}}">{{error_text}}</view>
 <scroll-view scroll-y style="height:1200rpx;">
-  <view class="crowText">这里是群的名称，就显示一行最大宽度这里是群的名称，就显示一行最大宽度这里是群的名称，就显示一行最大宽度</view>
-  <template is="crowDetail" data="{{packetlist:packetlist}}"></template>
-<!--无内容显示  -->
-  <image src="{{packetover}}" class="packetover"></image>
+  <view class="crowText" wx:if="{{flag == 1}}">
+    <open-data type="groupName" open-gid="{{item.openGId}}"></open-data>
+  </view>
+  <block wx:for="{{insideHB}}" wx:key="{{index}}">
+    <template is="crowDetail" data="{{packetlist:packetlist,item:item}}"></template>
+  </block>
+  <!--无内容显示  -->
+  <image src="{{packetover}}" class="packetover" wx:if="{{flag == 0}}"></image>
 </scroll-view>
