--- a/Weitianshi/redPackets/pages/publishHB/publishHB.wxml
+++ b/Weitianshi/redPackets/pages/publishHB/publishHB.wxml
@@ -6,11 +6,11 @@
   <view class="flex">
     <view class="bagLeft">
       <view class="bagTitle">红包金额</view>
-      <input class="redBagMoney" placeholder='建议不低于1元' bindinput="redBagMoney"></input>
+      <input type='number' class="redBagMoney" placeholder='建议不低于1元' bindinput="redBagMoney"></input>
     </view>
     <view class="bagRight">
       <view class="bagTitle">红包个数</view>
-      <input class="redBagNum" placeholder='请输入' bindinput="redBagNum"></input>
+      <input type='number' class="redBagNum" placeholder='请输入' bindinput="redBagNum"></input>
     </view>
   </view>
   <view class="point">由于微信限制，红包金额须大于红包个数，否则影响领取者取现</view>
