--- a/Weitianshi/redPackets/pages/myHB/myHB.wxml
+++ b/Weitianshi/redPackets/pages/myHB/myHB.wxml
@@ -1,20 +1,26 @@
-<view class='outBox' wx:if="{{HBInfo.length != 0}}" >
-  <block wx:for="{{HBInfo}}" wx:key="{{index}}">
-    <view class="whoGet" data-uniqueId="{{item.unique_id}}" bindtap='findHB'>
-      <view class="flex upBox">
-        <view class="des">{{item.title}}</view>
-        <view class="getTime">{{item.created_At}}</view>
+<import src="/redPackets/resource/Template/Template.wxml" />
+<scroll-view scroll-y="true" bindscrolltolower='loadMore'>
+  <view class='outBox' wx:if="{{HBInfo.length != 0}}">
+    <block wx:for="{{HBInfo}}" wx:key="{{index}}">
+      <view class="whoGet" data-uniqueId="{{item.unique_id}}" data-status='{{item.drawed_user.drawed_status}}' bindtap='findHB'>
+        <view class="flex upBox">
+          <view class="des">{{item.title}}</view>
+          <view class="getTime">{{item.created_At}}</view>
+        </view>
+        <view class='flex downBox'>
+          <view class="getNum">
+            ￥
+            <label>{{item.money}}</label> *
+            <label>{{item.number}}</label> 个</view>
+          <view class="getPerson">
+            <label>{{item.drawed_num}}</label> 人领取</view>
+        </view>
       </view>
-      <view class='flex downBox'>
-        <view class="getNum">￥
-          <label>{{item.money}}</label> *
-          <label>{{item.number}}</label> 个</view>
-        <view class="getPerson">
-          <label>{{item.drawed_num}}</label> 人领取</view>
-      </view>
-    </view>
-  </block>
-</view>
+    </block>
+    <view style='height:108rpx;'></view>
+  </view>
+</scroll-view>
+
 
 <image src='{{imgUrls}}' wx:if="{{HBInfo.length == 0}}" class='noHB'></image>
 <form report-submit='true' bindsubmit='formSubmit'>
@@ -22,4 +28,3 @@
     <image src="{{imgUrls2}}" class="btn1 floatBtn"></image>
   </button>
 </form>
-
