--- a/Weitianshi/redPackets/pages/publishedHB/publishedHB.wxml
+++ b/Weitianshi/redPackets/pages/publishedHB/publishedHB.wxml
@@ -11,7 +11,7 @@
       </button>
     </form>
   </view>
-  <view class="modalBox" wx:if="{{!show}}" bindtap='hidemodel'>
+  <view class="modalBox" wx:if="{{!show}}">
     <image class="tankuang" src="{{tankuang}}"></image>
     <view class="getMoney">￥ <label>{{bounce_money}}</label> </view>
     <view class="getName" wx:if="{{personInfo.is_card == 2}}">
