--- a/Weitianshi/redPackets/resource/Template/Template.wxml
+++ b/Weitianshi/redPackets/resource/Template/Template.wxml
@@ -21,8 +21,9 @@
         </view>
         <view class="recordText2 flex"></view>
       </view>
-      <view class="recordadd" wx:if="{{item.is_card == 2}}" data-id="{{item.user.user_id}}" catchtap='addPerson'>加好友</view>
-      <view class="recordadd" wx:if="{{item.is_card == 0}}">待验证</view>
+      <view class="recordadd" wx:if="{{item.is_card == 3&& user_id != item.user.user_id}}" data-id="{{item.user.user_id}}" catchtap='contactsAddDirect'>加好友</view>
+            <view class="recordadd" wx:if="{{item.is_card == 0&& user_id != item.user.user_id}}" data-id="{{item.user.user_id}}" catchtap='contactsAdd'>加好友</view>
+      <view class="recordadd" wx:if="{{item.is_card == 2 && user_id != item.user.user_id}}">待验证</view>
     </view>
   </view>
 </template>
@@ -106,7 +107,7 @@
 <!--群详情  -->
 <template name="crowDetail">
   <view id="crowDetail">
-    <image class="crowImg" src="{{packetlist}}" bindtap="userDetail" data-id="{{item.user.user_id}}">
+    <image class="crowImg" src="{{packetlist}}" bindtap="userDetail" data-id="{{item.user.user_id}}" data-uniqueid="{{item.packet.unique_id}}">
       <view class="HBrecord flex">
         <image src="{{item.user.avatarUrl}}" class="HBrecordImg" wx:if="{{item.user.avatarUrl}}"></image>
         <image class="HBrecordImg" src="/img/img-touxiang@2x.png" wx:if="{{!item.user.avatarUrl}}"></image>
@@ -124,7 +125,7 @@
         <view class="recordTime">领取<label>{{item.packet.drawed_num}}</label>/<label>{{item.packet.number}}</label>个</view>
         <progress percent="80" stroke-width="2" activeColor="#f7c660" backgroundColor="#ccc" />
          <view class="recordadd" wx:if="{{item.packet.drawed_user.drawed_status ==1}}">已领取</view> 
-        <view class="recordadd1" hover-class='recordadd2' hover-stop-propagation='true' wx:if="{{item.packet.drawed_user.drawed_status == 0}}" bindtap='getHB'>未领取</view>
+        <view class="recordadd1" hover-class='recordadd2' hover-stop-propagation='true' wx:if="{{item.packet.drawed_user.drawed_status == 0}}" bindtap='getHB'  data-id="{{item.user.user_id}}" data-uniqueid="{{item.packet.unique_id}}" data-status="{{item.packet.drawed_user.drawed_status}}">未领取</view>
       </view>
     </image>
   </view>
