--- a/Weitianshi/redPackets/pages/openedHB/openedHB.wxss
+++ b/Weitianshi/redPackets/pages/openedHB/openedHB.wxss
@@ -65,8 +65,9 @@ page {
 .buttonBox {
   background: #f14b50;
   position: fixed;
-  bottom: 32rpx;
+  bottom: 0;
   width: 100%;
+  height:104rpx;
 }
 
 .waitSure {
